--- a/Android/SisFarmaApp/app/src/main/res/layout/activity_sis_farma_app.xml
+++ b/Android/SisFarmaApp/app/src/main/res/layout/activity_sis_farma_app.xml
@@ -13,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/url"
-        android:text="10.0.2.2:8080"
+        android:text="webfarmacia.azurewebsites.net/FarmaciaServer"
         android:layout_below="@+id/textView24"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
